@@ -16,7 +16,12 @@ extern int fnmatch (const char *__pattern, const char *__name, int __flags)
 /*@=declundef =exportheader =redecl @*/
 #endif
 
+#if defined(WITH_PCRE) && defined(HAVE_PCREPOSIX_H)
+#include <pcreposix.h>
+#else
 #include <regex.h>
+#endif
+
 #if defined(__LCLINT__)
 /*@-declundef -exportheader @*/ /* LCL: missing modifies (only is bogus) */
 extern void regfree (/*@only@*/ regex_t *preg)
